Bug with page size in offer page fixed. Added links for the first and the last page.

--- a/travel-web/WebContent/changePassword.xhtml
+++ b/travel-web/WebContent/changePassword.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
 		<h:panelGroup>
 			<h2>Change password (#{loginForm.userName})</h2>
-			<h:panelGrid columns="2" columnClasses="titleColumn,userdataColumn">
+			<h:panelGrid columns="2" columnClasses="titleColumn,dataColumn">
 				<h:outputText for="currentPass"
 					value="#{bundle.Update_currentPassword}:" />
 				<h:inputSecret id="currentPass"
