--- a/travel-web/WebContent/template.xhtml
+++ b/travel-web/WebContent/template.xhtml
@@ -53,7 +53,7 @@
 					</h:panelGrid>
 				</h:panelGroup>
 				<h:panelGroup layout="block"
-					styleClass="contentFrame mainContent clearfix">
+					styleClass="mainContent clearfix">
 					<h:panelGroup layout="block" styleClass="contentPanel">
 						<h:panelGroup>
 							<ui:insert name="content">Content</ui:insert>
