--- a/travel-web/WebContent/editProfile.xhtml
+++ b/travel-web/WebContent/editProfile.xhtml
@@ -10,7 +10,7 @@
 		<h:panelGroup>
 			<h2>#{profileForm.profileTitle}</h2>
 			<h:panelGroup rendered="#{profileForm.userData != null}">
-				<h:panelGrid columns="2" columnClasses="titleColumn,userdataColumn">
+				<h:panelGrid columns="2" columnClasses="titleColumn,dataColumn">
 					<h:outputText for="email" value="#{bundle.Login_email}:" />
 					<h:inputText id="email" value="#{profileForm.userData.email}"
 						required="true" requiredMessage="E-mail is required">
